# twinwidth

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  analyze.py  create_submit.sh  draw.py  run.py  schlauch.csv  schlauch2.csv
data/: unpack.py
decomps/: sandbox.py
desc/: paper.bib  paper.tex
results/: 0405  0406  0407  2023-04-19.csv  2023-04-25.csv  2023-04-26.csv  2023-05-03.csv  2023-05-09.csv  2023-05-15.csv  comps.txt  current.csv  old.csv  overview.csv
source/: CMakeLists.txt  algo.cpp  algo.h  example.cpp  graph.cpp  graph.h  lower_bounds.cpp  lower_bounds.h  main.cpp  partitionDP.cpp  reductions.h  utils.hpp
tmp/: 1.dot  10.dot  11.dot  12.dot  13.dot  14.dot  15.dot  16.dot  17.dot  18.dot  19.dot  2.dot  20.dot  2023-04-26.txt  2023-05-09.txt  21.dot  22.dot  23.dot  24.dot  25.dot  26.dot  27.dot  28.dot  29.dot  3.dot  30.dot  31.dot  32.dot  33.dot  34.dot  35.dot  36.dot  37.dot  38.dot  39.dot  4.dot  40.dot  41.dot  42.dot  43.dot  (+28 more)
