add_executable(main
        utils.hpp
        graph.h
        graph.cpp
        lower_bounds.h
        lower_bounds.cpp
        reductions.h
        reductions.cpp
        algo.h
        algo.cpp
        main.cpp
)
#add_executable(partition partitionDP.cpp)
#target_link_libraries(example girgs::girgs)
